2011-03-28  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-20
	* improved tracking/displaying unresolved InputTags
	* various little bug fixes

2011-03-23  Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	*   Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-18
	* add possibility to edit SMART column

2011-03-22  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-17
	* add possibility to re-order prescale columns

2011-03-21  Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-16
	* modify, save & corrupt problems fixed (Vasu)
	* folders creation bug fixed - bug#77084 (Raul)

2011-03-16  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-15
	* improvements to SmartPrescaleEditor (color coding etc, Martin)
	* fix uint64 and vuint64 to work for the highest bit, using
	BigInteger (Martin)

2011-03-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-14
	* renamed paths propagated to PrescaleService config (Martin)
	* extend ascii diff report to cover event content and output
	module changes (Martin)
	* more improvements to html diff report (Martin)
	* improvements to SmartPrescale handling (Martin)

2011-03-04  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-13
	* changes to SmartPrescaleService (Martin)

2011-03-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-12
	* remove option to apply operators to sequences & paths (Ulf)

2011-03-01  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-11
	* additional updates needed to make operators work properly (Ulf)

2011-02-25  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-10
	* latest changes from Ulf regarding operators

2011-01-31  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-09
	* bug fix to ConfigurationTreeActions.importReferenceContainer()
	* also include SmartPrescaleEditor, first version
